--- a/journal/202101.md
+++ b/journal/202101.md
@@ -15,24 +15,24 @@ Behind are five years of non-stop development and delivery on the promise of dec
 
 The long-awaited v1.6 aka Hidden Hydra is finally here! This is probably the biggest upgrade in Decred's history with several major and numerous smaller upgrades across all software projects. All changes are listed in the detailed release notes so here we will only highlight the big ones:
 
-- **Private transactions** are now accessible through a graphical user interface Decrediton. It works by mixing coins and making it hard to impossible to trace them and spy on your balance or activity. This feature is critical for protecting the privacy of regular users and especially voters, whose privacy improves security of the entire network. It also protects the fungibility principle of Decred [Constitution](https://docs.decred.org/governance/decred-constitution/). The chosen implementation (CoinShuffle++) has the beautiful properties of keeping coin supply auditable at all times, relying on simple cryptography and achieving high privacy thanks to smart integration with the staking system and large mixing volume.
+- **Private transactions** are now accessible through the Decrediton graphical user interface. It works by mixing coins and making it extremely difficult to trace them and spy on your balance or activity. This feature is critical for protecting the privacy of regular users and especially voters, whose privacy improves security of the entire network. It also protects the fungibility principle in Decred's [Constitution](https://docs.decred.org/governance/decred-constitution/). The chosen implementation (CoinShuffle++) has the beautiful properties of keeping coin supply auditable at all times, relying on simple cryptography and achieving high privacy thanks to smart integration with the staking system and large mixing volume.
 
 - **New VSP architecture** greatly improves experience of using Voting Service Providers, which are used by roughly half of all voters that don't run voting wallets 24/7. No accounts to create and remember, no redeem scripts to back up, no email to share, no addresses reused, and optional mixing support - all make staking easier and more private.
 
-- **Decentralized treasury control** will transfer the power to approve or reject spending from the Treasury into the hands of Decred stakeholders. The required consensus algorithm changes will be voted on in the coming months and activate if approved.
+- **Decentralized treasury control** will transfer the power to approve or reject spending from the Treasury into the hands of Decred stakeholders. The required consensus changes will be voted on in the coming months and activate if approved.
 
-- **Secure, private and fair exchange** where you control the keys at all times and the exchange never holds any coins. Private information is protected in the best way possible - by not collecting it. Unfair front-running and high-frequency trading is prevented by pseudo-random order matching. Trading volume is expensive to fake and there are no trading fees.
+- **DCRDEX** bringing secure, private and fair exchange, where you control the keys at all times and the exchange never holds any coins. Private information is protected in the best way possible - by not collecting it. Unfair front-running and high-frequency trading is prevented by pseudo-random order matching. Trading volume is expensive to fake because all the transactions are on chain, and the exchange doesn't take any trading fees.
 
 And here are the high level steps to upgrade:
 
 - check out the new [release page](https://decred.org/release/) for an overview of new features and download links, or watch the video [overview](https://www.youtube.com/watch?v=3AxBa-EE8RM) (v1.6 features start at 21:00)
 - [verify](https://docs.decred.org/advanced/verifying-binaries/) the downloads _(the routine is not fun but it ensures the files have not been tampered with!)_
 - read the [release notes](https://github.com/decred/decred-binaries/releases/tag/v1.6.0) and pay attention to downgrade warnings - it will not be possible to use previous versions after blockchain and wallet files have been upgraded
-- learn how to migrate to the new VSP staking system { any good user friendly link? or is it all obvious in Decrediton? }
 - learn about mixing with @Exitus' short [video tutoral](https://www.youtube.com/watch?v=QC65PBNwAK4)
+- buy tickets the vspd way from within Decrediton by choosing a VSP from the drop-down and number of tickets - and leave it open until the transaction is mined so that you also pay the VSP fee
 - set your [vote choice](https://docs.decred.org/governance/consensus-rule-voting/how-to-vote/) for the upcoming consensus rule change vote to enable decentralized treasury { I wish we had a user friendly link explaining how it works, maybe https://proposals.decred.org/proposals/c96290a ? }. If you're new to Decred governance, see @Checkmate's quick governance [walkthrough](https://www.youtube.com/watch?v=1QiC0btcf7E) video.
 - watch network's upgrade and consensus vote progress [here](https://voting.decred.org/) or [here](https://explorer.dcrdata.org/agenda/treasury)
-- currently using DCRDEX requires some technical skills but this will be simplified in the next releases. In the meantime you can follow this [guide](https://medium.com/decred/how-to-get-on-dcrdex-mvp-816d713ec5c0) by @richardred { is the guide still relevant? }
+- currently using DCRDEX requires some technical skills but this will be simplified in the next releases. In the meantime you can follow this [guide](https://medium.com/decred/how-to-get-on-dcrdex-mvp-816d713ec5c0) by @richardred
 
 There are some [known issues](https://www.reddit.com/r/decred/comments/lebx71/error_when_trying_to_purchase_tickets_with/) with buying tickets in Decrediton v1.6.0 that will be fixed in the upcoming patch release.
 
@@ -200,7 +200,7 @@ Status as of Jan 20 [update](https://github.com/decredcommunity/proposals/blob/m
 **Other**
 
 - [dcrseeder](https://github.com/decred/dcrseeder) received fixes for [peer](https://github.com/decred/dcrseeder/pull/43) tracking and graceful [shutdown](https://github.com/decred/dcrseeder/pull/41)
-- [release](https://github.com/decred/release) tool was updated to v1.6 and used by multiple developers to reproduced release builds
+- [release](https://github.com/decred/release) tool was updated to v1.6 and used by multiple developers to reproduce release builds
 - Bug Bounty program [reported](https://bounty.decred.org/2021/01/status-update/) that it has processed a total of 150 submissions and 14 were eligible for a payout
 - development help is [welcome](https://www.reddit.com/r/decred/comments/l3pj90/dcronchain_status/gki371x/) for [dcronchain.com](https://dcronchain.com/) - [the app](https://github.com/Decred-Bulls/dcronchain) is based on Nuxt.js (Vue.js derivative)
 
@@ -233,15 +233,15 @@ Unusual changes detected among the [tracked](https://github.com/decredcommunity/
 
 In January the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 11,878 DCR and spent 6,750 DCR. Using January's daily average DCR/USD rate of $54.25, this is $644K received and $366K spent. At December's average daily rate of $31.07, the USD figure billed for past work is $210K. As of Feb 10, the Treasury balance is 647,942 DCR (64.3 million USD at $99.26).
 
-Four proposals were submitted in January, with 2 finished voting:
+Four proposals were submitted in January, and by Journal publication in early Feb they had all finished voting:
 
 - DCRDEX Phase 2 development [proposal](https://proposals.decred.org/proposals/d462ac3) set new records in terms of support from the ticket pool, with 53% of the eligible tickets turning out to vote almost unanimously yes (98.2%)! This proposal approved a budget of $245,000 to develop a set of features including support for SPV wallets, ETH and ERC-20 token trading, more Bitcoin forks, and Decrediton integration.
 
 - Decred in Depth podcast is going to be under new management, and doing it live, after a [proposal](https://proposals.decred.org/proposals/391108e) from @elima\_iii was approved with 86.3% approval and 28% turnout - this covers 24-36 episodes at $500/episode.
 
-- A new research proposal from @ammarooni requests $17,500 to write and publish a book, [Decentralized Credits: The Digitization of Money and State](https://proposals.decred.org/proposals/9e1d644) - this proposal was narrowly rejected in early Feb, with 57% approval and record turnout of 70%. 
+- A new research proposal from @ammarooni requested $17,500 to write and publish a book, [Decentralized Credits: The Digitization of Money and State](https://proposals.decred.org/proposals/9e1d644) - this proposal was narrowly rejected in early Feb, with 57% approval and record turnout of 70%. 
 
-- The Decred Arabia team [requested](https://proposals.decred.org/proposals/d0c32d5) $6,200 for six months' funding. This proposal was approved in early Feb with 96% support and turnout of 55%, making it the proposal with the second highest turnout (ahead of the DCRDEX phase 2 proposal).
+- The Decred Arabia team [requested](https://proposals.decred.org/proposals/d0c32d5) $6,200 for six months' funding. This proposal was approved in early Feb with 96% support and turnout of 55%, making it the proposal with the second highest turnout (ahead of the DCRDEX phase 2 proposal, which has gone from the new record-setter to 3rd in a few weeks).
 
 It looks like the surge in ticket price and PoS participation has also resulted in an increased level of Politeia engagement on the part of the people who hold tickets.
 
@@ -267,7 +267,7 @@ As of Feb 10, PoS [upgrade threshold](https://voting.decred.org/) for the decent
 
 Decred's Lightning Network had 28 nodes (+4), 47 channels (+5) with a total capacity of 8.3 DCR (-0.4), as of Feb 1. @jholdstock's network map has moved to a [new domain](https://ln-map.jholdstock.uk/). LN capacity is becoming more important as more LN features are exposed to end users via Decrediton GUI. Thank you to all LN operators for [running the nodes](https://docs.decred.org/lightning-network/overview/)!
 
-In his second blockchain analysis [report](https://blockcommons.red/post/dcr-on-chain-2/) @richardred followed how the freshly mined coins are flowing through mining pools, their miners and eventually hitting exchange addresses, while buying tickets is less common. The report updates on the progress of developing the tooling, and shares visualizations of address/transaction clusters and the flow of funds. The main focus of the report is on the 5 clusters which received the most [Coinbase](https://docs.decred.org/glossary/#coinbase-transaction) DCR in 2019-2020, and the 5 which received the most DCR from these transactions. These clusters were thought to represent mining pools and their users, but examination of how they are structured indicated variability in function, with some appearing to belong to individuals. A total of 4,852 distinct clusters (with more than 1 address each) can be taken as a rough guess at the number of different individuals/wallets who mined DCR in this period. 
+In his second blockchain analysis [report](https://blockcommons.red/post/dcr-on-chain-2/) @richardred followed how the freshly mined coins are flowing through mining pools, their miners and eventually hitting exchange addresses. The report updates on the progress of developing the tooling, and shares visualizations of address/transaction clusters and the flow of funds. The main focus of the report is on the 5 clusters which received the most [Coinbase](https://docs.decred.org/glossary/#coinbase-transaction) DCR in 2019-2020, and the 5 which received the most DCR from these transactions. These clusters were thought to represent mining pools and their users, but examination of how they are structured indicated variability in function, with some appearing to belong to individuals. A total of 4,852 distinct clusters (with more than 1 address each) can be taken as a rough guess at the number of different individuals/wallets who mined DCR in this period. 
 
 ## Integrations
 
@@ -318,7 +318,7 @@ Selected articles:
 - Decred blockchain analysis - Part 2 PoW wow by @richardred ([blockcommons.red](https://blockcommons.red/post/dcr-on-chain-2/))
 - Crypto Commons 2020 review and v1.0 changelog by @richardred ([blockcommons.red](https://blockcommons.red/post/ppcc-changelog-2020/))
 
-The [cryptocommons.cc](https://cryptocommons.cc/) book received a major update covering selected developments from 2020, and these were also written up as a standalone blog post in the style of an annual review. The idea is that people who already read Peer Production on the Crypto Commons can get the update without reading it all again. While the full post is 18,000 words long there is also a tweet [thread](https://twitter.com/RichardRed0x/status/1346160647923511297) version that's much shorter. Regular readers of the Relevant External section will recognize many of the same stories. One of the main themes of the update is divergence of the "open source movement", with disillusionment apparently growing among people working on more corporate-dominated projects. This contrasts with the crypto space where the number of open source projects, and funding mechanisms for these, are growing in scale and diversity. While the bear market was hard for many projects and saw their efforts scaled back, others were able to continue without a care, and there are always more new forms being invented.
+The [cryptocommons.cc](https://cryptocommons.cc/) book received a major update covering selected developments from 2020, and these were also written up as a standalone blog post in the style of an annual review. The idea is that people who already read Peer Production on the Crypto Commons can get the update without reading it all again. While the full post is 18,000 words long there is also a tweet [thread](https://twitter.com/RichardRed0x/status/1346160647923511297) version that's much shorter. Regular readers of the Relevant External section will recognize many of the same stories. One of the main themes of the update is divergence of the "open source movement", with disillusionment apparently growing among people working on more corporate-dominated projects. This contrasts with the crypto space where the number of open source projects, and funding mechanisms for these, are growing in scale and diversity. While the bear market was hard for many projects and saw their efforts scaled back, others were able to continue without a care, and there are still a steady stream of new funding initiatives being trialled.
 
 Videos:
 
@@ -360,7 +360,7 @@ Selected Reddit posts:
 - what the [future](https://www.reddit.com/r/decred/comments/kpzieu/any_good_threadslinks_on_what_the_future_of/) of Politeia could look like
 - which programming [languages](https://www.reddit.com/r/decred/comments/kogozc/what_programming_languages_to_learn_to_work_for/) are used at Decred
 - [yet another](https://github.com/decredcommunity/wiki/blob/master/wiki/misconceptions.md#coin-holders-cannot-make-good-decisions) "isn't it dangerous that anyone can vote on code changes?" [question](https://www.reddit.com/r/decred/comments/ktei89/isnt_it_kinda_dangerous_that_anyone_can_vote_on/) collected many thorough answers
-- a few other recurring topics have surfaced: turning Decred into [DeFi](https://www.reddit.com/r/decred/comments/kqqwje/dcrdex_is_impressive/), naming sub-DCR [units](https://www.reddit.com/r/decred/comments/kq0uh2/names_of_the_units_of_decred/), and everyone's favorite idea to [rename Decred](https://www.reddit.com/r/decred/comments/kpjte8/change_decred_name_to_another_without_any/) to something less negative inevitably became month's most commented thread
+- a few other recurring topics have surfaced: turning Decred into [DeFi](https://www.reddit.com/r/decred/comments/kqqwje/dcrdex_is_impressive/), naming sub-DCR [units](https://www.reddit.com/r/decred/comments/kq0uh2/names_of_the_units_of_decred/), and everyone's favorite idea to [rename Decred](https://www.reddit.com/r/decred/comments/kpjte8/change_decred_name_to_another_without_any/) to something less negative inevitably became the month's most commented thread
 
 Selected Twitter discussions:
 
@@ -375,7 +375,7 @@ Selected Twitter discussions:
 
 In January DCR was trading between USD 39.80-69.00 / BTC 0.0013-0.0020. The average daily rate was $54.25.
 
-In a colorful [chart](https://twitter.com/_Checkmatey_/status/1347662655830441984) by @Checkmate showed how DCR has not followed 5 bigger coins in their decline against BTC and even made some gains.
+A colorful [chart](https://twitter.com/_Checkmatey_/status/1347662655830441984) by @Checkmate showed how DCR has not followed 5 bigger coins in their decline against BTC and even made some gains.
 
 Decred update in Our Network newsletter [issue 56](https://ournetwork.substack.com/p/our-network-issue-56) by @Checkmate and @PermabullNino [highlights](https://twitter.com/_Checkmatey_/status/1355296688026447873) the highest ever inflow of DCR into tickets that supported a doubling in DCR/BTC price. Indicator of price at which DCR was staked shows that only 17% of all staking occurred above $40, suggesting that stakers are in a reasonable profit in USD terms. DCR/BTC breakeven level for stakers is estimated around 0.004 BTC, above which ~60% of all stakers will be in profit.
 
