--- a/journal/202101.md
+++ b/journal/202101.md
@@ -8,8 +8,11 @@ Happy Birthday, Decred!
 
 Behind are five years of non-stop development and delivery on the promise of decentralization, one pragmatic step at a time. January was no different:
 
-- { v1.6 release }
-- { a batch of outreach and research proposals voting/voted }
+- v1.6 is out, check the Hidden Hydra section below for details of the release.
+- Ticket price and Proof of Stake participation continued rising to hit new highs.
+- The turnout record for a Politeia proposal was broken in January, and again already in February, going all the way to 70% participation!
+- Continued funding for DCRDEX was almost unanimously approved, Decred in Depth and the Decred Arabia team also had proposals approved.
+- The Journal finally has its own Politeia proposal (shared with junior partner Politeia Digest) which would see funding secured for 2021, and it's already being voted on.
 
 ## Hidden Hydra is here!
 
