--- a/journal/202101.md
+++ b/journal/202101.md
@@ -32,7 +32,7 @@ And here are the high level steps to upgrade:
 - [verify](https://docs.decred.org/advanced/verifying-binaries/) the downloads _(the routine is not fun but it ensures the files have not been tampered with!)_
 - read the [release notes](https://github.com/decred/decred-binaries/releases/tag/v1.6.0) and pay attention to downgrade warnings - it will not be possible to use previous versions after blockchain and wallet files have been upgraded
 - learn about mixing with @Exitus' short [video tutoral](https://www.youtube.com/watch?v=QC65PBNwAK4)
-- buy tickets the vspd way from within Decrediton by choosing a VSP from the drop-down and number of tickets - and leave it open until the transaction is mined so that you also pay the VSP fee
+- buy tickets the vspd way from within Decrediton by choosing a VSP from the drop-down and the number of tickets - and leave it open until the transaction is mined and the VSP fee is paid (may take up to 20 min). If you see "Error" on tickets, re-sync fixes it, found in the ticket status tab.
 - set your [vote choice](https://docs.decred.org/governance/consensus-rule-voting/how-to-vote/) for the upcoming consensus rule change vote to enable decentralized treasury. To learn how it works, read the [proposal](https://proposals.decred.org/proposals/c96290a) for a general concept and the [DCP](https://github.com/decred/dcps/blob/master/dcp-0006/dcp-0006.mediawiki) for latest technical details. If you're new to Decred governance, see @Checkmate's quick governance [walkthrough](https://www.youtube.com/watch?v=1QiC0btcf7E) video.
 - watch network's upgrade and consensus vote progress [here](https://voting.decred.org/) or [here](https://explorer.dcrdata.org/agenda/treasury)
 - currently using DCRDEX requires some technical skills but this will be simplified in the next releases. In the meantime you can follow this [guide](https://medium.com/decred/how-to-get-on-dcrdex-mvp-816d713ec5c0) by @richardred
@@ -423,6 +423,6 @@ You can submit a story [here](https://github.com/xaur/decred-news/labels/next%20
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, jholdstock, richardred
-- reviews and feedback: davecgh, dnldd, elian, oshorefueled
+- reviews and feedback: davecgh, dnldd, elian, Exitus, oshorefueled
 - title image: {}
 - funding: Decred Treasury
