--- a/journal/202101.md
+++ b/journal/202101.md
@@ -422,7 +422,7 @@ You can submit a story [here](https://github.com/xaur/decred-news/labels/next%20
 
 Credits (alphabetical order):
 
-- writing and editing: bee, degeri, jholdstock, richardred
+- writing and editing: bee, degeri, jholdstock, l1ndseymm, richardred
 - reviews and feedback: davecgh, dnldd, elian, Exitus, oshorefueled
 - title image: {}
 - funding: Decred Treasury
