--- a/journal/202101.md
+++ b/journal/202101.md
@@ -242,7 +242,7 @@ Four proposals were submitted in January, and by Journal publication in early Fe
 
 - Decred in Depth podcast is going to be under new management, and doing it live, after a [proposal](https://proposals.decred.org/proposals/391108e) from @elima\_iii was approved with 86.3% approval and 28% turnout - this covers 24-36 episodes at $500/episode.
 
-- A new research proposal from @ammarooni requested $17,500 to write and publish a book, [Decentralized Credits: The Digitization of Money and State](https://proposals.decred.org/proposals/9e1d644) - this proposal was narrowly rejected in early Feb, with 57% approval and record turnout of 70%. 
+- A new research proposal from @ammarooni requested $17,500 to write and publish a book, [Decentralized Credits: The Digitization of Money and State](https://proposals.decred.org/proposals/9e1d644) - this proposal was narrowly rejected in early Feb, with 57% approval and record turnout of 70%.
 
 - The Decred Arabia team [requested](https://proposals.decred.org/proposals/d0c32d5) $6,200 for six months' funding. This proposal was approved in early Feb with 96% support and turnout of 55%, making it the proposal with the second highest turnout (ahead of the DCRDEX phase 2 proposal, which has gone from the new record-setter to 3rd in a few weeks).
 
@@ -270,7 +270,7 @@ As of Feb 10, PoS [upgrade threshold](https://voting.decred.org/) for the decent
 
 Decred's Lightning Network had 28 nodes (+4), 47 channels (+5) with a total capacity of 8.3 DCR (-0.4), as of Feb 1. @jholdstock's network map has moved to a [new domain](https://ln-map.jholdstock.uk/). LN capacity is becoming more important as more LN features are exposed to end users via Decrediton GUI. Thank you to all LN operators for [running the nodes](https://docs.decred.org/lightning-network/overview/)!
 
-In his second blockchain analysis [report](https://blockcommons.red/post/dcr-on-chain-2/) @richardred followed how the freshly mined coins are flowing through mining pools, their miners and eventually hitting exchange addresses. The report updates on the progress of developing the tooling, and shares visualizations of address/transaction clusters and the flow of funds. The main focus of the report is on the 5 clusters which received the most [Coinbase](https://docs.decred.org/glossary/#coinbase-transaction) DCR in 2019-2020, and the 5 which received the most DCR from these transactions. These clusters were thought to represent mining pools and their users, but examination of how they are structured indicated variability in function, with some appearing to belong to individuals. A total of 4,852 distinct clusters (with more than 1 address each) can be taken as a rough guess at the number of different individuals/wallets who mined DCR in this period. 
+In his second blockchain analysis [report](https://blockcommons.red/post/dcr-on-chain-2/) @richardred followed how the freshly mined coins are flowing through mining pools, their miners and eventually hitting exchange addresses. The report updates on the progress of developing the tooling, and shares visualizations of address/transaction clusters and the flow of funds. The main focus of the report is on the 5 clusters which received the most [Coinbase](https://docs.decred.org/glossary/#coinbase-transaction) DCR in 2019-2020, and the 5 which received the most DCR from these transactions. These clusters were thought to represent mining pools and their users, but examination of how they are structured indicated variability in function, with some appearing to belong to individuals. A total of 4,852 distinct clusters (with more than 1 address each) can be taken as a rough guess at the number of different individuals/wallets who mined DCR in this period.
 
 ## Integrations
 
@@ -370,7 +370,7 @@ Selected Twitter discussions:
 - @geostone [noted](https://twitter.com/KingSolomonMine/status/1347581022850846727) that Decred does not belong to any "feature tokens" yet has many of their features
 - @ammarooni [points out](https://twitter.com/Ammarooni/status/1354961779256864779) that Ray Dalio's latest [thoughts](https://www.bridgewater.com/research-and-insights/ray-dalio-what-i-think-of-bitcoin) recognize the lack of Bitcoin's adaptability
 
-> People who love DCR, really love it :) DCRDEX a big fundamental and market structure catalyst, after brutal bear. Layer in DCR privacy and it’s now one of the most sovereign venues to swap coin.
+> People who love DCR, really love it :) DCRDEX a big fundamental and market structure catalyst, after brutal bear. Layer in DCR privacy and it's now one of the most sovereign venues to swap coin.
 > 
 > Now people just stacking tickets, and stacking sats, via DCR. ([@cburniske](https://twitter.com/cburniske/status/1355406801731108866))
 
@@ -398,7 +398,7 @@ Firo (formerly Zcoin) suffered a 51% [attack](https://twitter.com/firoorg/status
 
 BitMEX Research caused a stir when they [tweeted](https://twitter.com/BitMEXResearch/status/1351855414103715842) that Bitcoin had experienced a small double-spend. It was helpfully clarified [by Hasu](https://insights.deribit.com/market-research/was-there-a-bitcoin-double-spend-on-jan-20-2021/) and others that this was not a malicious double-spend attack but rather a benign event where a user happened to be bumping the fee on their transaction when a stale block occurred and the original transaction was expunged from the blockchain.
 
-Yearn Finance [voted](https://snapshot.page/#/yearn/proposal/QmX8oYTSkaXSARYZn7RuQzUufW9bVVQtwJ3zxurWrquS9a) to [inflate](https://www.coindesk.com/yearn-finance-votes-to-inflate-yfi-token-supply-by-20) the YFI supply by 20% to fund future development. YFI has been heralded for its "fair launch" which put all tokens in the hands of liquidity miners, but now they have voted to dedicate 20% to development some months later. As part of the run-up to the vote lead Yearn Finance developer Andre Cronje [wrote](https://andrecronje.medium.com/building-in-defi-sucks-part-2-75df9ee7871b) about how building in DeFi sucks. 
+Yearn Finance [voted](https://snapshot.page/#/yearn/proposal/QmX8oYTSkaXSARYZn7RuQzUufW9bVVQtwJ3zxurWrquS9a) to [inflate](https://www.coindesk.com/yearn-finance-votes-to-inflate-yfi-token-supply-by-20) the YFI supply by 20% to fund future development. YFI has been heralded for its "fair launch" which put all tokens in the hands of liquidity miners, but now they have voted to dedicate 20% to development some months later. As part of the run-up to the vote lead Yearn Finance developer Andre Cronje [wrote](https://andrecronje.medium.com/building-in-defi-sucks-part-2-75df9ee7871b) about how building in DeFi sucks.
 
 Tether has [printed](https://www.coindesk.com/tether-mints-record-2b-usdt-in-one-week) a record number of USDT. Total supply of stablecoins is [exploding](https://twitter.com/PermabullNino/status/1354545678437912579) and issuance patterns [correlate](https://twitter.com/PermabullNino/status/1352278182288793607) with crypto prices.
 
