use title image

--- a/journal/202101.md
+++ b/journal/202101.md
@@ -1,8 +1,8 @@
 # {DRAFT} Decred Journal – January 2021
 
-![{alt text}](../img/{file.jpg} "{hover tooltip text}")
+![abstract art](../img/journal-202101-384.png)
 
-_Image: {"$title by $author. $optional-description" for artwork, "$description" for photos}_
+_Image: Overflow Dissipation by @saender_
 
 Happy Birthday, Decred!
 
@@ -424,5 +424,5 @@ Credits (alphabetical order):
 
 - writing and editing: bee, degeri, jholdstock, l1ndseymm, richardred
 - reviews and feedback: davecgh, dnldd, elian, Exitus, oshorefueled
-- title image: {}
+- title image: saender
 - funding: Decred Treasury
