use StakeShuffle in release section

--- a/journal/202101.md
+++ b/journal/202101.md
@@ -18,7 +18,7 @@ Behind are five years of non-stop development and delivery on the promise of dec
 
 The long-awaited v1.6 aka Hidden Hydra is finally here! This is probably the biggest upgrade in Decred's history with several major and numerous smaller upgrades across all software projects. All changes are listed in the detailed release notes so here we will only highlight the big ones:
 
-- **Private transactions** are now accessible through the Decrediton graphical user interface. It works by mixing coins and making it extremely difficult to trace them and spy on your balance or activity. This feature is critical for protecting the privacy of regular users and especially voters, whose privacy improves security of the entire network. It also protects the fungibility principle in Decred's [Constitution](https://docs.decred.org/governance/decred-constitution/). The chosen implementation (CoinShuffle++) has the beautiful properties of keeping coin supply auditable at all times, relying on simple cryptography and achieving high privacy thanks to smart integration with the staking system and large mixing volume.
+- **Private transactions** are now accessible through the Decrediton graphical user interface. It works by mixing coins and making it extremely difficult to trace them and spy on your balance or activity. This feature is critical for protecting the privacy of regular users and especially voters, whose privacy improves security of the entire network. It also protects the fungibility principle in Decred's [Constitution](https://docs.decred.org/governance/decred-constitution/). The chosen implementation (StakeShuffle) has the beautiful properties of keeping coin supply auditable at all times, relying on simple cryptography and achieving high privacy thanks to smart integration with the staking system and large mixing volume.
 
 - **New VSP architecture** greatly improves experience of using Voting Service Providers, which are used by roughly half of all voters that don't run voting wallets 24/7. No accounts to create and remember, no redeem scripts to back up, no email to share, no addresses reused, and optional mixing support - all make staking easier and more private.
 
