add updated notice at the end

--- a/journal/202101.md
+++ b/journal/202101.md
@@ -24,7 +24,7 @@ The long-awaited v1.6 aka Hidden Hydra is finally here! This is probably the big
 
 - **Decentralized treasury control** will transfer the power to approve or reject spending from the Treasury into the hands of Decred stakeholders. The required consensus changes will be voted on in the coming months and activate if approved.
 
-- **DCRDEX** bringing secure, private and fair exchange, where you control the keys at all times and the exchange never holds any coins. Private information is protected in the best way possible - by not collecting it. The combination of pseudorandom order matching within epochs, requiring on-chain funds and rate limits prevent bad behavior like high-frequency trading, front-running, order spoofing and faking the trading volume. And the exchange doesn't take any trading fees. _(corrected Feb-11)_
+- **DCRDEX** bringing secure, private and fair exchange, where you control the keys at all times and the exchange never holds any coins. Private information is protected in the best way possible - by not collecting it. The combination of pseudorandom order matching within epochs, requiring on-chain funds and rate limits prevent bad behavior like high-frequency trading, front-running, order spoofing and faking the trading volume. And the exchange doesn't take any trading fees.
 
 And here are the high level steps to upgrade:
 
@@ -426,3 +426,5 @@ Credits (alphabetical order):
 - reviews and feedback: davecgh, dnldd, elian, Exitus, oshorefueled
 - title image: saender
 - funding: Decred Treasury
+
+**UPDATED** 2021-02-11 to correct how DCRDEX works and use term StakeShuffle instead of CoinShuffle++ (the latter is only one part of the system). You can find exact changes [here](https://github.com/xaur/decred-news/commits/master).
