--- a/journal/202102.md
+++ b/journal/202102.md
@@ -1,4 +1,4 @@
-# {DRAFT} Decred Journal – {month} {year}
+# {DRAFT} Decred Journal – February 2020
 
 ![{alt text}](../img/{file.jpg} "{hover tooltip text}")
 
@@ -106,8 +106,6 @@ Other:
 
 - { smaller items go here }
 
-Dev activity stats for {month}: {n} active PRs, {n} master commits, {n}K added and {n}K deleted lines spread across {n} repositories. Contributions came from {n}-{n} developers per repository.
-
 ## People
 
 { hint: list people who made their first non-trivial commits merged in master branches, in alphabetical order }
@@ -136,7 +134,7 @@ Community stats as of {date}:
 
 ## Governance
 
-In {month} the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received {n} DCR and spent {n} DCR. Using {month}'s daily average DCR/USD rate of ${n.dd}, this is ${n}K received and ${n}K spent. At {prev month}'s average daily rate of ${n.dd}, the USD figure billed for past work is ${n}K. As of {date}, Treasury balance is {n} DCR ({n.d} million USD at ${n.dd}).
+In February the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received {n} DCR and spent {n} DCR. Using February's daily average DCR/USD rate of ${n.dd}, this is ${n}K received and ${n}K spent. At January's average daily rate of ${n.dd}, the USD figure billed for past work is ${n}K. As of {date}, Treasury balance is {n} DCR ({n.d} million USD at ${n.dd}).
 
 { high level recap of decision-making activity and most important events }
 
@@ -153,7 +151,7 @@ Politeia Digest [issue {}]({}) and [issue {}]({}) have more details on the month
 - check dcrdata.org (preferred), dcrstats.com and charts.dcr.farm to get the numbers
 - use the same `zoom` parameter for all dcrdata links }
 
-Hashrate: {month}'s [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=t1-t2&scale=linear&bin=block&axis=time) {set zoom to show the month} opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month. Pool hashrate [distribution](https://miningpoolstats.stream/decred) as of {date}: {pool name n%, ...}.
+Hashrate: February's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=t1-t2&scale=linear&bin=block&axis=time) {set zoom to show the month} opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month. Pool hashrate [distribution](https://miningpoolstats.stream/decred) as of {date}: {pool name n%, ...}.
 
 { hint: fallback link for pool distribution: https://dcrstats.com/pow }
 
@@ -165,7 +163,7 @@ Staking: [30-day average](https://dcrstats.com/) ticket price was {n.d, try to s
 
 { hint: for dcr.farm set the zoom to show exactly UTC month 1st 00:00:00 - next month 1st 00:00:00 }
 
-Nodes: Throughout [{month}](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1583020800000&to=1585699200000) {set zoom to show the month} there was an average of {} public listening nodes and {} total nodes according to dcr.farm. Version distribution: {vx.y.z: n% (+n%), ...}.
+Nodes: Throughout [February](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1612137600000&to=1614556800000) there was an average of {} public listening nodes and {} total nodes according to dcr.farm. Version distribution: {vx.y.z: n% (+n%), ...}.
 
 { maybe mention LN status https://ln-map.jamieholdstock.com/ }
 
@@ -255,7 +253,7 @@ Selected Twitter discussions:
 
 ## Markets
 
-In {month} DCR was trading between USD {n.dd}-{n.dd} / BTC {n.ddddd}-{n.ddddd}. The average daily rate was ${n.dd}.
+In February DCR was trading between USD {n.dd}-{n.dd} / BTC {n.ddddd}-{n.ddddd}. The average daily rate was ${n.dd}.
 
 { markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis }
 
@@ -275,7 +273,7 @@ In {month} DCR was trading between USD {n.dd}-{n.dd} / BTC {n.ddddd}-{n.ddddd}. 
 
 ## About This Issue
 
-This is issue {number} of Decred Journal. Index of all issues, mirrors, and translations is available [here](https://xaur.github.io/decred-news/).
+This is issue 35 of Decred Journal. Index of all issues, mirrors, and translations is available [here](https://xaur.github.io/decred-news/).
 
 Most information from third parties is relayed directly from source after a minimal sanity check. The authors of the Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
