--- a/journal/202102.md
+++ b/journal/202102.md
@@ -106,7 +106,8 @@ ABPF useful for other projects https://matrix.to/#/!zefvTnlxYHPKvJMThI:decred.or
 
 Other:
 
-- { smaller items go here }
+- Kohola https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$uc4-7jDq7LehB55bK3sAjq9qL-g2WDJ8wOW5HZTvknI
+- ticket ntfn script https://matrix.to/#/!uCnoeYfbhUnvwWihzS:decred.org/$oB6ylGDjPyuCNa_0mH9VwLya_55b8JQiS0zoObMoTmY?via=zettaport.com&via=decred.org
 
 ## People
 
@@ -170,6 +171,8 @@ Nodes: Throughout [February](https://charts.dcr.farm/d/000000014/nodes?orgId=1&f
 { maybe mention LN status https://ln-map.jamieholdstock.com/ }
 
 { any interesting analysis or events in the network }
+
+https://www.reddit.com/r/decred/comments/lj2her/og_ticket/gnj3zqq/
 
 ## Integrations
 
@@ -249,17 +252,17 @@ Other non-English content:
 
 Comm systems news:
 
-- {}
+- new ways to impersonate in Matrix, pay attention https://twitter.com/GrapheneOS/status/1365881076229488641
 
 { selected discussed topics, as bullet list or one paragraph per topic }
 
 Selected Reddit posts:
 
-- {}
+- https://www.reddit.com/r/decred/comments/lo72lf/discussion_around_33_word_seed_vs_bip_39/
 
 Selected Twitter discussions:
 
-- {}
+- https://twitter.com/cburniske/status/1362146220123201536
 
 ## Markets
 
@@ -270,6 +273,8 @@ In February DCR was trading between USD {n.dd}-{n.dd} / BTC {n.ddddd}-{n.ddddd}.
 https://twitter.com/marco_peereboom/status/1357126633812070403
 
 https://twitter.com/_Checkmatey_/status/1358968202898755584
+
+https://twitter.com/_Checkmatey_/status/1363709306885922826
 
 { dcrdex updates, esp. volume }
 
