--- a/journal/202102.md
+++ b/journal/202102.md
@@ -287,6 +287,11 @@ Taking KYC to the next level https://cointelegraph.com/news/dutch-bitcoin-exchan
 
 { other: regulations, privacy, security, fun }
 
+Fed outage Feb 24 { still thinking if relevant enough }:
+
+- https://www.theregister.com/2021/02/24/federal_reserve_outage/
+- https://www.dailymail.co.uk/news/article-9296385/Entire-Federal-Reserve-payment-CRASHES.html
+
 ## About This Issue
 
 This is issue 35 of Decred Journal. Index of all issues, mirrors, and translations is available [here](https://xaur.github.io/decred-news/).
